--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -142,9 +142,9 @@ entries:
     full: "Bøgh, Lone, Artur Ketnath, and Majken Thorvildsen. 1975. “Om forsøg med Vinnapas Dispersion EP 1.” *Meddelelser om konservering* 2, no. 5: 135–43."
   - id: "Böhme et al. 2020"
     full: "Böhme, Nadine, Manfred Anders, Tobias Reichelt, Katharina Schuhmann, Alexandra Bridarolli, and Aurelia Chevalier. 2020. “New Treatments for Canvas Consolidation and Conservation.” *Heritage Science* 8, art. 16. <https://doi.org/10.1186/s40494-020-0362-y>."
-  - id: "Boissonnas 1961"
+  - id: "A. Boissonnas 1961"
     full: "Boissonnas, Alain. 1961. “Relining with Glass-Fiber Fabric.” *Studies in Conservation* 6, no. 1: 26–30."
-  - id: "Boissonnas 2003"
+  - id: "P. Boissonnas 2003"
     full: "Boissonnas, Pierre. 2003. “Comparisons of Dimensional Stability between Woven Glass Fibre Fabric and Conventional Linen Canvas as Lining Supports for Paintings.” In *Lining Paintings: Papers from the Greenwich Conference on Comparative Lining Techniques*, edited by Caroline Villers, 32–34. London: Archetype."
   - id: "Boitelle, Poggendorf, and Stevenson, forthcoming"
     full: "Boitelle, R., R. Poggendorf, and L. Stevenson. Forthcoming. “A Decisive Experience: A Technical Examination of Martinique Paintings by Paul Gauguin and Charles Laval.” In *Gauguin and Laval in Martinique*. Amsterdam: Van Gogh Museum."
