--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -2657,7 +2657,7 @@ figure_list:
     credit: "Images: Filip A. Petcu"
 
   - id: "table-56-1"
-    credit: "Table: Filip A. Petcu"
+    credit: "Table: Cristina Carșote and Filip A. Petcu"
     src: "tables/table-56-1.html"
     media_type: table
 
