--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -782,6 +782,8 @@ entries:
     full: "Lazzari, M., D. Scalarone, G. Malucelli, and O. Chiantore. 2011. “Durability of Acrylic Films from Commercial Aqueous Dispersion: Glass Transition Temperature and Tensile Behavior as Indexes of Photooxidative Degradation.” *Progress in Organic Coatings* 70, no. 2: 116–21."
   - id: "Learner 2004"
     full: "Learner, Thomas J. S. 2004. *The Analysis of Modern Paints.* Los Angeles: Getty Conservation Institute."
+  - id: "Lee et al. 2022"
+    full: "Lee, D.-H., N.-S. Kim, M. Scharff, M. Nielsen, M. Mecklenburg, L. Fuster-López, L. Bratasz, and C. Andersen. 2022. “Numerical modelling of mechanical degradation of canvas paintings under dessication.” *Heritage Science* 10: 1–13."
   - id: "Leene et al. 1975"
     full: "Leene, Jentina E., L. Demeny, R. J. Elema, A. J. de Graaf, and J. J. Surtel. 1975. “Artificial Ageing of Yarns in Presence As Well As in Absence of Light and under Different Atmospheric Conditions.” In *ICOM Committee for Conservation: 4th Triennial Meeting, Venice, 13–18 October 1975: Preprints*, 75/10/2-1–11. Paris: ICOM."
   - id: "Lelekova 1966"
