Change to citation Vasari (1568) 1998
1568, original pub date, should be in brackets. Changed in both the in-text citation and the bibliography

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -1344,8 +1344,8 @@ entries:
     full: "van Loon, Annelies, Petria Noble, and Aviva Burnstock. 2021. “Ageing and Deterioration of Traditional Oil and Tempera Paints.” In *Conservation of Easel Paintings*, edited by Joyce Hill Stoner and Rebecca Rushfield, 329–56. London: Routledge."
   - id: "van Och and Hoppenbrouwers 2003"
     full: "van Och, Jos, and René Hoppenbrouwers. 2003. “Mist-Lining and Low-Pressure Envelopes: An Alternative Lining Method for the Reinforcement of Canvas Paintings.” *Zeitschrift für Kunsttechnologie und Konservierung* 17, no. 1: 116–28."
-  - id: "Vasari (1568) 1998"
-    full: "Vasari, Giorgio. (1568) 1998. *Las vidas de los más excelentes arquitectos, pintores y escultores italianos desde Cimabue a nuestros tiempo*s. Anthology. Madrid: “Tecnos.”"
+  - id: "Vasari [1568] 1998"
+    full: "Vasari, Giorgio. [1568] 1998. *Las vidas de los más excelentes arquitectos, pintores y escultores italianos desde Cimabue a nuestros tiempo*s. Anthology. Madrid: “Tecnos.”"
   - id: "Véliz 1982"
     full: "Véliz, Z. 1982. “Francisco Pacheco's Comments on Painting in Oil.” *Studies in Conservation*, no. 2: 49–57."
   - id: "Ventra 2016"
