--- a/content/_data/publication.yaml
+++ b/content/_data/publication.yaml
@@ -49,7 +49,7 @@ project_team:
  - Kurt Hauser, *Cover Design*
  - Molly McGeehan, *Production*
  - Danielle Brink, *Image and Rights Acquisition*
- - Erin Cecele Dunigan and Chloe Millhauser, *Digital Assistant*
+ - Erin Cecele Dunigan and Chloe Millhauser, *Digital Assistants*
 
 # ------------------------------------------------------------------------------
 # Contributors
